<resources>
  <string name="gapi_client_id" translatable="false">519981656006-rvtri3v9rb8i20n0hiqnqvm8jmg3o3av.apps.googleusercontent.com</string>
  <string name="fmark_root_directory" translatable="false">Clients</string>
  <string name="gservices_app_name" translatable="false">FMark</string>

  <string name="app_name">Clients</string>
  <string name="title">Title</string>

  <string name="search_hint">Search</string>
  <string name="sign_in_fail_cant_get_account">Can\'t get Google account</string>
  <string name="sign_in_fail_instant">Sign in refused</string>
  <string name="sign_in_fail_eventual">Sign in failed. Please check your Internet connection.</string>

  <string name="label_name">Name :</string>
  <string name="label_reading">Reading :</string>
  <string name="label_comment">Comment :</string>
  <string name="client_details_title">Client details</string>
  <string name="cancel">Cancel</string>

  <!-- TODO: Remove or change this placeholder text -->
  <plurals name="client_already_exists">
    <item quantity="one">One client with this name already exists. Proceed ?</item>
    <item quantity="other">%d clients with this name already exist. Proceed ?</item>
  </plurals>
  <string name="titlebar_editor">%s</string>
  <string name="titlebar_client_details">Client details</string>
  <string name="titlebar_main">FMark</string>
  <string name="last_update">Last update :</string>
  <string name="creation_date">Creation date :</string>
  <string name="label_undo">Undo</string>
  <string name="label_save">Save</string>
  <string name="label_clear">Clear</string>
  <string name="sign_in_fail_try_again">Try again</string>
  <string name="sign_in_fail_continue_without_drive">Continue without Google Drive support</string>
  <string name="label_refresh">Refresh</string>
  <string name="fail_data_fetch">Can\'t fetch data. Please check your data connection.</string>
  <string name="new_session">New session</string>
  <string name="update_time_with_placeholder">Last updated on %s</string>
  <string name="comment_hint">Write comment…</string>
  <string name="accessibility_description_cover_image">Background image</string>
  <string name="accessibility_description_comment_button">Switch to comment button</string>
  <string name="accessibility_description_face_button">Switch to face drawing</string>
  <string name="accessibility_description_front_button">Switch to front drawing</string>
  <string name="accessibility_description_back_button">Switch to back drawing</string>
  <string name="accessibility_description_save_inprogress">Save in progress</string>
  <string name="accessibility_description_save_done">Saved</string>
  <string name="accessibility_description_save_error">Save error</string>
  <string name="contains_filename_forbidden_chars">Illegal character</string>

  <string name="conflicting_data_dialog_message">This data has been updated from another device on %1$s.</string>
  <string name="conflicting_data_dialog_reload">Reload this page</string>
  <string name="conflicting_data_dialog_reload_with_changes">Reload this page and lose changes made since opening this data</string>
  <string name="conflicting_data_dialog_ignore">Keep current changes and overwrite the updated data</string>
</resources>
