<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:background="@android:color/white"
 android:orientation="vertical"
 android:padding="24dp"
 tools:context=".fragments.ConflictingDataDialog">

  <TextView
   android:id="@+id/conflicting_data_dialog_message"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:layout_gravity="center_horizontal|top"
   android:text="@string/conflicting_data_dialog_message"
   android:textColor="@android:color/black"
   android:textSize="18sp"
   android:textStyle="bold"/>

  <Button
   android:id="@+id/conflicting_data_dialog_reload"
   style="@style/Widget.AppCompat.Button.Borderless.Colored"
   android:layout_below="@id/conflicting_data_dialog_message"
   android:layout_alignParentEnd="true"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:layout_gravity="end"
   android:gravity="end|center_vertical"
   android:text="@string/conflicting_data_dialog_reload" />

  <Button
   android:id="@+id/conflicting_data_dialog_reload_with_changes"
   style="@style/Widget.AppCompat.Button.Borderless.Colored"
   android:layout_below="@id/conflicting_data_dialog_message"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:gravity="start|center_vertical"
   android:text="@string/conflicting_data_dialog_reload_with_changes" />

  <Button
   android:id="@+id/conflicting_data_dialog_ignore"
   style="@style/Widget.AppCompat.Button.Borderless.Colored"
   android:layout_below="@id/conflicting_data_dialog_reload_with_changes"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:gravity="start|center_vertical"
   android:text="@string/conflicting_data_dialog_ignore" />

</RelativeLayout>
