<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:layout_gravity="center"
 android:layout_margin="16dp"
 android:padding="16dp"
 tools:context=".fragments.ClientDetails">

  <TextView
   android:id="@+id/client_details_title"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:layout_marginTop="8dp"
   android:text="@string/client_details_title"
   android:textColor="@android:color/black"
   android:textStyle="bold"
   android:textSize="24sp"
   app:layout_constraintTop_toTopOf="parent"
   app:layout_constraintEnd_toEndOf="parent"
   app:layout_constraintStart_toStartOf="parent"/>

  <View
   android:id="@+id/client_details_title_separator"
   android:layout_width="match_parent"
   android:layout_height="1px"
   android:layout_margin="24dp"
   android:background="@android:color/darker_gray"
   app:layout_constraintTop_toBottomOf="@+id/client_details_title"/>

  <TextView
   android:id="@+id/client_details_label_name"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:layout_marginTop="24dp"
   android:layout_marginBottom="8dp"
   android:layout_marginStart="8dp"
   android:layout_marginEnd="8dp"
   android:text="@string/label_name"
   android:labelFor="@id/client_details_name"
   app:layout_constraintStart_toStartOf="parent"
   app:layout_constraintTop_toBottomOf="@id/client_details_title_separator"/>

  <TextView
   android:id="@+id/client_details_label_reading"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:layout_marginTop="24dp"
   android:text="@string/label_reading"
   android:labelFor="@id/client_details_reading"
   app:layout_constraintStart_toStartOf="@id/client_details_label_name"
   app:layout_constraintTop_toBottomOf="@id/client_details_label_name"
   />

  <TextView
   android:id="@+id/client_details_label_comment"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:layout_marginTop="24dp"
   android:text="@string/label_reading"
   android:labelFor="@id/client_details_reading"
   app:layout_constraintStart_toStartOf="@id/client_details_label_name"
   app:layout_constraintTop_toBottomOf="@id/client_details_label_reading"
   />

  <TextView
   android:id="@+id/client_details_last_update_date_label"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:layout_marginTop="24dp"
   android:text="@string/last_update"
   app:layout_constraintStart_toStartOf="@id/client_details_label_name"
   app:layout_constraintTop_toBottomOf="@id/client_details_label_comment"
   />

  <TextView
   android:id="@+id/client_details_creation_date_label"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:layout_marginTop="24dp"
   android:text="@string/creation_date"
   app:layout_constraintStart_toStartOf="@id/client_details_label_name"
   app:layout_constraintTop_toBottomOf="@id/client_details_last_update_date_label"
   />

  <androidx.constraintlayout.widget.Barrier
   android:id="@+id/client_details_form_barrier"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   app:barrierDirection="end"
   app:constraint_referenced_ids="client_details_label_name,client_details_label_reading,client_details_last_update_date_label,client_details_creation_date_label" />

  <EditText
   android:id="@+id/client_details_name"
   android:layout_width="0dp"
   android:layout_height="wrap_content"
   android:layout_marginStart="8dp"
   android:layout_marginEnd="8dp"
   android:inputType="textPersonName"
   android:importantForAutofill="no"
   app:layout_constraintBaseline_toBaselineOf="@id/client_details_label_name"
   app:layout_constraintEnd_toEndOf="parent"
   app:layout_constraintStart_toEndOf="@id/client_details_form_barrier"/>

  <EditText
   android:id="@+id/client_details_reading"
   android:layout_width="0dp"
   android:layout_height="wrap_content"
   android:layout_marginStart="8dp"
   android:layout_marginEnd="8dp"
   android:inputType="textPhonetic"
   android:importantForAutofill="no"
   app:layout_constraintBaseline_toBaselineOf="@id/client_details_label_reading"
   app:layout_constraintEnd_toEndOf="parent"
   app:layout_constraintStart_toEndOf="@id/client_details_form_barrier" />

  <EditText
   android:id="@+id/client_details_comment"
   android:layout_width="0dp"
   android:layout_height="wrap_content"
   android:layout_marginStart="8dp"
   android:layout_marginEnd="8dp"
   android:inputType="text"
   android:importantForAutofill="no"
   app:layout_constraintBaseline_toBaselineOf="@id/client_details_label_comment"
   app:layout_constraintEnd_toEndOf="parent"
   app:layout_constraintStart_toEndOf="@id/client_details_form_barrier" />

  <TextView
   android:id="@+id/client_details_last_update_date_value"
   android:layout_width="0dp"
   android:layout_height="wrap_content"
   android:layout_marginStart="8dp"
   android:layout_marginEnd="8dp"
   app:layout_constraintBaseline_toBaselineOf="@id/client_details_last_update_date_label"
   app:layout_constraintEnd_toEndOf="parent"
   app:layout_constraintStart_toEndOf="@id/client_details_form_barrier" />

  <TextView
   android:id="@+id/client_details_creation_date_value"
   android:layout_width="0dp"
   android:layout_height="wrap_content"
   android:layout_marginStart="8dp"
   android:layout_marginEnd="8dp"
   app:layout_constraintBaseline_toBaselineOf="@id/client_details_creation_date_label"
   app:layout_constraintEnd_toEndOf="parent"
   app:layout_constraintStart_toEndOf="@id/client_details_form_barrier" />

  <Button
   android:id="@+id/client_details_ok"
   style="@style/Widget.AppCompat.Button.Borderless.Colored"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:layout_marginTop="36dp"
   android:layout_marginEnd="8dp"
   android:layout_marginBottom="8dp"
   android:text="@android:string/ok"
   app:layout_constraintBottom_toBottomOf="parent"
   app:layout_constraintEnd_toEndOf="parent"
   app:layout_constraintTop_toBottomOf="@id/client_details_creation_date_label" />

  <Button
   android:id="@+id/client_details_cancel"
   style="@style/Widget.AppCompat.Button.Borderless.Colored"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:layout_marginEnd="8dp"
   android:text="@string/cancel"
   app:layout_constraintBaseline_toBaselineOf="@id/client_details_ok"
   app:layout_constraintBottom_toBottomOf="parent"
   app:layout_constraintEnd_toStartOf="@id/client_details_ok"/>

  <TextView
   android:id="@+id/client_details_character_error"
   android:visibility="invisible"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:textColor="@android:color/holo_red_light"
   android:text="@string/contains_filename_forbidden_chars"
   app:layout_constraintEnd_toStartOf="@+id/client_details_cancel"
   app:layout_constraintStart_toEndOf="@+id/client_details_form_barrier"
   app:layout_constraintBaseline_toBaselineOf="@id/client_details_ok" />

</androidx.constraintlayout.widget.ConstraintLayout>
